--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@joeskeen/kinda-type",
+  "name": "kinda-type",
   "version": "1.0.0",
   "description": "A TypeScript utility type implementing a recursive Partial<T> for making mocking in unit tests less painful.",
   "main": "index.js",
+  "private": false,
   "scripts": {
     "test": "tsc -p ."
   },
